ADD: Patch [2936632] Some underlined letters UPD: Russian language file
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@2263 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.4.5/language/doublecmd.ru.po
+++ b/branches/0.4.5/language/doublecmd.ru.po
@@ -999,8 +999,8 @@ msgid "-----------"
 msgstr ""
 
 #: TFRMFILEPROPERTIES.LBLATTRTEXTSTR.CAPTION
-msgid "Representation in text:"
-msgstr "В виде текста:"
+msgid "Text:"
+msgstr "Текст:"
 
 #: TFRMFILEPROPERTIES.LBLEXEC.CAPTION
 msgid "Execute"
