UPD: Language files
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@2271 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.4.5/language/doublecmd.bg.po
+++ b/branches/0.4.5/language/doublecmd.bg.po
@@ -907,6 +907,7 @@ msgid "Open in VFS"
 msgstr "Отваряне във VFS"
 
 #: TFRMFILEASSOC.MIVIEW.CAPTION
+msgctxt "TFRMFILEASSOC.MIVIEW.CAPTION"
 msgid "View"
 msgstr "Преглед"
 
@@ -1274,6 +1275,10 @@ msgstr "Разширени"
 #: TFRMFINDDLG.TSLOADSAVE.CAPTION
 msgid "Load/Save"
 msgstr "Зареждане/Съхраняване"
+
+#: TFRMFINDDLG.TSRESULTS.CAPTION
+msgid "Results"
+msgstr ""
 
 #: TFRMFINDDLG.TSSTANDARD.CAPTION
 msgid "Standard"
@@ -3602,6 +3607,11 @@ msgctxt "ulng.rsmnuactions"
 msgid "Actions"
 msgstr "Действия"
 
+#: ulng.rsmnuedit
+msgctxt "ulng.rsmnuedit"
+msgid "Edit"
+msgstr "Обработка"
+
 #: ulng.rsmnueject
 msgid "Eject"
 msgstr "Изваждане"
@@ -3613,6 +3623,11 @@ msgstr "Прикачане"
 #: ulng.rsmnuumount
 msgid "Umount"
 msgstr "Разкачане"
+
+#: ulng.rsmnuview
+msgctxt "ulng.rsmnuview"
+msgid "View"
+msgstr "Преглед"
 
 #: ulng.rsmsgchdirfailed
 msgid "ChDir to [%s] failed!"
