--- a/branches/0.4.5/language/doublecmd.ru.po
+++ b/branches/0.4.5/language/doublecmd.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Double Commander 0.3.5 alpha\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2010-01-10 22:11+0300\n"
+"PO-Revision-Date: 2010-01-23 22:07+0300\n"
 "Last-Translator: Alexander Koblov <Alexx2000@mail.ru>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -906,6 +906,7 @@ msgid "Open in VFS"
 msgstr "Открыть в VFS"
 
 #: TFRMFILEASSOC.MIVIEW.CAPTION
+msgctxt "TFRMFILEASSOC.MIVIEW.CAPTION"
 msgid "View"
 msgstr "Просмотреть"
 
@@ -999,7 +1000,9 @@ msgid "-----------"
 msgstr ""
 
 #: TFRMFILEPROPERTIES.LBLATTRTEXTSTR.CAPTION
-msgid "Text:"
+#, fuzzy
+#| msgid "Text:"
+msgid "Representation in text:"
 msgstr "Текст:"
 
 #: TFRMFILEPROPERTIES.LBLEXEC.CAPTION
@@ -1274,6 +1277,10 @@ msgstr "Расширенный"
 #: TFRMFINDDLG.TSLOADSAVE.CAPTION
 msgid "Load/Save"
 msgstr "Шаблоны поиска"
+
+#: TFRMFINDDLG.TSRESULTS.CAPTION
+msgid "Results"
+msgstr "Результаты"
 
 #: TFRMFINDDLG.TSSTANDARD.CAPTION
 msgid "Standard"
@@ -3607,6 +3614,11 @@ msgctxt "ulng.rsmnuactions"
 msgid "Actions"
 msgstr "Команды"
 
+#: ulng.rsmnuedit
+msgctxt "ulng.rsmnuedit"
+msgid "Edit"
+msgstr "Редактировать"
+
 #: ulng.rsmnueject
 msgid "Eject"
 msgstr "Извлечь"
@@ -3618,6 +3630,11 @@ msgstr "Смонтировать"
 #: ulng.rsmnuumount
 msgid "Umount"
 msgstr "Отмонтировать"
+
+#: ulng.rsmnuview
+msgctxt "ulng.rsmnuview"
+msgid "View"
+msgstr "Просмотреть"
 
 #: ulng.rsmsgchdirfailed
 msgid "ChDir to [%s] failed!"
