--- a/branches/0.4.5/doc/changelog.txt
+++ b/branches/0.4.5/doc/changelog.txt
@@ -1,4 +1,48 @@
 ﻿--------------------------------------------------------------------------------
+xx.01.2009 Release Double Commander 0.4.5.1 beta
+--------------------------------------------------------------------------------
+19.02.2010 FIX: Some fixes for bug [2954358] error with write permissions
+17.02.2010 UPD: Ukrainian language file by Ma$terok
+17.02.2010 UPD: English help files by Rod J
+14.02.2010 ADD: File search in multiply directories
+13.02.2010 FIX: Hangs on load string from incorrect language file
+13.02.2010 UPD: Czech language from Petr Stasiak
+12.02.2010 FIX: Bug [2947859] "terminal window size+Apply in preferences".
+11.02.2010 FIX: "Open with" under Windows
+11.02.2010 UPD: Language files.
+11.02.2010 FIX: Changed '=' TargetEqualSource to '>' RightEqualLeft and '<' LeftEqualRight (bug [2947845]).
+10.02.2010 FIX: Bug [2947846] '..' item always becomes current if going up inside an archive
+10.02.2010 FIX: Crash in drag&drop on Windows Vista/7.
+07.02.2010 FIX: Create directory on empty disk
+02.02.2010 FIX: Bug [2944649] Copy files
+02.02.2010 FIX: Check if application is active instead of checking main form's focus if FileWatcher should not work when application is in the background. This fixes the issue where refreshing file list is not working even when DC is active.
+29.01.2010 FIX: Don't execute hotkeys that coincide with quick search combination
+27.01.2010 FIX: Drive panel alignment
+27.01.2010 FIX: Encoding in Zip archives
+27.01.2010 FIX: Rar stores file name in OEM encoding (from RAR documentation)
+26.01.2010 FIX: Find files in hidden directories
+26.01.2010 FIX: Find hidden folders
+25.01.2010 FIX: Don't copy last LineEnding when copy file names to clipboard
+24.01.2010 FIX: Bug [2938523] Console
+23.01.2010 FIX: Case insensitive file search for non ACSII file names
+23.01.2010 FIX: Debian package: Section name
+23.01.2010 FIX: Debian package: add "Maintainer" and "Depends" fields
+22.01.2010 FIX: Debian package architecture for Linux 64 bit
+21.01.2010 FIX: Add Wfx plugins from options dialog
+20.01.2010 FIX: Stretch bitmaps from file associations manager
+19.01.2010 UPD: File properties dialog interface alignment
+19.01.2010 UPD: Options dialog interface alignment
+19.01.2010 FIX: Unpack multivolume archives
+16.01.2010 FIX: Show only actions names in "Actions submenu"
+16.01.2010 FIX: Incorrect save/load search/replace history
+16.01.2010 UPD: Use new icon in About window.
+15.01.2010 FIX: Case insensitive quick search for non ASCII symbols
+15.01.2010 FIX: Viewer/editor  window getting bigger every time it is opened (bug [2924166]).
+15.01.2010 FIX: Error when can not read/write file description
+15.01.2010 FIX: Delete to trash with file paths containing spaces. Fix reading error from gvfs-trash.
+13.01.2010 FIX: Skip all files in move operation
+13.01.2010 FIX: Bug [2930960] doublecmd.sh
+--------------------------------------------------------------------------------
 10.01.2009 Release Double Commander 0.4.5 beta
 --------------------------------------------------------------------------------
 17.05.2009 ADD: Feature Request [2777123] Show occupied space
