UPD: Merge fixes from trunk UPD: changelog.txt file
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@2532 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.4.5/doc/changelog.txt
+++ b/branches/0.4.5/doc/changelog.txt
@@ -1,6 +1,10 @@
 ﻿--------------------------------------------------------------------------------
-xx.01.2009 Release Double Commander 0.4.5.1 beta
+22.02.2009 Release Double Commander 0.4.5.1 beta
 --------------------------------------------------------------------------------
+22.02.2010 UPD: Better error message when error in CopyFile.
+22.02.2010 FIX: Crash in CopyFile when cannot read file.
+21.02.2010 FIX: Bug [2955066] Split file
+19.02.2010 FIX: Unneeded separator in Actions submenu if no actions were added.
 19.02.2010 FIX: Some fixes for bug [2954358] error with write permissions
 17.02.2010 UPD: Ukrainian language file by Ma$terok
 17.02.2010 UPD: English help files by Rod J
